--- a/Source/Methods/RFmxDPD/RFmxDPD.csproj
+++ b/Source/Methods/RFmxDPD/RFmxDPD.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DPD</RootNamespace>
-    <AssemblyName>NationalInstruments.ReferenceDesignLibraries.SA.DPD</AssemblyName>
+    <AssemblyName>NationalInstruments.ReferenceDesignLibraries.Methods.DPD</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
