--- a/build-tools/Unit Tests/SGTests/SGTests.csproj
+++ b/build-tools/Unit Tests/SGTests/SGTests.csproj
@@ -52,17 +52,41 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Support Files\LTE TDD Waveform.tdms">
+    <None Include="Support Files\BT No Burst.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Support Files\BT No Burst.tdms">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Support Files\WLAN Single Burst.tdms">
+    <None Include="Support Files\LTE_TDD_1.0.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\LTE_TDD_1.0.tdms">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\LTE_TDD_2.0.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\LTE_TDD_2.0.tdms">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\WLAN_No_Burst_2.0.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\WLAN_No_Burst_2.0.tdms">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\WLAN_Single_Burst_1.0.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Support Files\WLAN_Single_Burst_1.0.tdms">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ini-parser">
+      <Version>2.5.2</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>2.0.0</Version>
     </PackageReference>
