--- a/Examples/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control.csproj
+++ b/Examples/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control/dEVM with Digital PAEN Control.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ivi.Driver, Version=1.4.0.0, Culture=neutral, PublicKeyToken=a128c98f1d7717c1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
