--- a/build-tools/Unit Tests/SGTests/SGTests.csproj
+++ b/build-tools/Unit Tests/SGTests/SGTests.csproj
@@ -84,6 +84,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FluentAssertions">
+      <Version>5.9.0</Version>
+    </PackageReference>
     <PackageReference Include="ini-parser">
       <Version>2.5.2</Version>
     </PackageReference>
@@ -102,6 +105,8 @@
     <Reference Include="NationalInstruments.ModularInstruments.NIRfsgPlayback.Fx40, Version=19.0.0.49152, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Source\SG\SG.csproj">
